fix button spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,7 @@ button {
   background-color: #ef5f32;
   color: white;
   padding: 10px 20px;
+  margin: 2px 2px 2px 2px;
   border: none;
   cursor: pointer;
   -webkit-border-radius: 6px;
